app/public/assets/css/styles.css
body {
    background: url("../images/home_lion.jpg") no-repeat center center fixed;
        background-size: cover;
        color: white;
        font-size: 24px;
        font-family: 'Roboto', sans-serif;
}

h1 {
    margin-left: 15px;
}

h4 {
    margin-left: 15px;
}

.dropbtn {
    background-color: #4169E1;
    color: white;
    padding: 16px;
    font-size: 16px;
    border: none;
}

.dropdown {
    position: relative;
    display: inline-block;
    
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #ffffff;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.dropdown-content a:hover {background-color: #ddd;}

.dropdown:hover .dropdown-content {display: block;}

.dropdown:hover .dropbtn {background-color: #6495ED;}

.container {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    font-size: 14px;    
    color: white;
    text-align: left;
 }

